buildSrc/src/test/resources/test-projects/invalid-demo/demos/invalid/src/nativeMain/kotlin/demos/invalid/Main.kt
package demos.invalid

fun main() {
    println("Invalid demo placeholder")
}
